update gamesvr-warsow badge

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,19 @@
 {
     "cSpell.words": [
         "autoconfig",
+        "csgo",
+        "deathmatch",
         "docker",
+        "dockerize",
+        "dockerized",
+        "freeplay",
         "ipvlan",
         "macvlan",
         "mavclan",
-        "noobs"
+        "minecraft",
+        "noobs",
+        "srcds",
+        "warmod",
+        "warsow"
     ]
 }
