--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "amxmodx",
         "autoconfig",
         "csgo",
         "deathmatch",
@@ -8,11 +9,15 @@
         "dockerized",
         "freeplay",
         "ipvlan",
+        "laclede's",
         "macvlan",
         "mavclan",
         "minecraft",
         "noobs",
+        "repos",
+        "sourcemod",
         "srcds",
+        "valheim",
         "warmod",
         "warsow"
     ]
