--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "davidanson.vscode-markdownlint",
-		"editorconfig.editorconfig"
+        "editorconfig.editorconfig",
+        "streetsidesoftware.code-spell-checker",
     ]
 }
