--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "ioquake",
         "ipvlan",
         "laclede's",
+        "Laclede’s",
         "macvlan",
         "mavclan",
         "minecraft",
