--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,13 +29,15 @@
         "mavclan",
         "minecraft",
         "noobs",
+        "pzomboid",
         "repos",
         "sourcemod",
         "srcds",
         "svencoop",
         "valheim",
         "warmod",
-        "warsow"
+        "warsow",
+        "Zomboid"
     ],
     "files.exclude": {
         "**/.git": true,
