add game server entry for gamesvr-qcde

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
         "minecraft",
         "noobs",
         "pzomboid",
+        "qcde",
         "repos",
         "sourcemod",
         "srcds",
